--- a/app/components/diagram/diagram.scss
+++ b/app/components/diagram/diagram.scss
@@ -212,6 +212,9 @@ body {
 .endpoint {
   opacity: 1;
   background: white;
+  &.many-endpoint {
+    background-color: red;
+  }
 }
 .endpoint-label {
   color: $color5;
