Some minor improvements in toolbox and z-index in diagram elements.

--- a/app/components/app/app-template.html
+++ b/app/components/app/app-template.html
@@ -3,6 +3,17 @@
     {{title}}
   </div>
   <ul class="nav nav-list">
+    <li class="drop-menu-item" v-for="operations in groupedOperations">
+      <a href="#" v-on:click="toggle"><span class="fa-caret-right fa"></span> {{ $key }} </a>
+      <ul class="nav nav-list tree slide-down">
+        <div v-for="op in operations">
+          <toolbox-component :operation="op" />
+        </div>
+      </ul>
+    </li>
+  </div>
+  <!--
+  <ul class="nav nav-list">
     <li class="drop-menu-item">
       <a href="#" v-on:click="toggle"><span class="fa-caret-right fa"></span> Data sources</a>
       <ul class="nav nav-list tree slide-down">
@@ -12,6 +23,7 @@
       </ul>
     </li>
   </ul>
+  -->
   <!--
   <ul class="list-group list-group-flush">
     <div class="channel" v-for="op in operations">
