--- a/app/components/app/app.scss
+++ b/app/components/app/app.scss
@@ -1,14 +1,18 @@
+html {
+    overflow-y: scroll;
+}
+
 .slide-up, .slide-down {
     max-height: 0;
     overflow-y: hidden;
     -webkit-transition: max-height 0.5s ease-in-out;
     -moz-transition: max-height 0.5s ease-in-out;
     -o-transition: max-height 0.5s ease-in-out;
-    transition: max-height 0.5s ease-in-out;
+    transition: max-height 0.8s ease-in-out;
 }
 
 .slide-down {
-    max-height: 100%;
+    max-height: 1000px;
 }
 .drop-menu-item {
     a {
@@ -19,3 +23,7 @@
         text-transform: uppercase;
     }
 }
+.drop-menu-item a {
+    background: #eee;
+    padding: 2px
+} 
