--- a/app/components/properties/data-reader-template.html
+++ b/app/components/properties/data-reader-template.html
@@ -1,4 +1,5 @@
 <div>
+    <label>Available data sources</label>
     <select class="form-control">
         <option>Teste</option>
         <option>Novo Teste</option>
