--- a/app/components/diagram/diagram-template.html
+++ b/app/components/diagram/diagram-template.html
@@ -1,23 +1,28 @@
 <div>
-    <div class="buttons-toolbar btn-group pull-right">
+    <div class="buttons-toolbar btn-group pull-right diagram-toolbar">
 
         <button class="btn btn-default btn-sm" v-on:click="load"><span class="fa fa-folder-open-o"></span></button>
-        <button class="btn btn-success btn-sm" v-on:click="save"><span class="fa fa-save"></span></button>
-        <button class="btn btn-default btn-sm" v-on:click="deleteSelected"><span class="fa fa-remove"></span></button>
-        <button class="btn btn-default btn-sm" v-on:click="zoomIn" :disabled="!zoomInEnabled"><span class="fa fa-search-plus"></span></button>
-        <button class="btn btn-default btn-sm" v-on:click="zoomOut" :disabled="!zoomOutEnabled"><span class="fa fa-search-minus"></span></button>
+        <button class="btn btn-success btn-sm add-margin" v-on:click="save"><span class="fa fa-save"></span></button>
 
-        <button class="btn btn-default pull-right btn-sm" v-on:click="loadSample" data-sample-id="1">
+        <button class="btn btn-default btn-sm add-margin" v-on:click="deleteSelected"><span class="fa fa-remove"></span></button>
+        
+        <button class="btn btn-default btn-sm" v-on:click="zoomIn" :disabled="!zoomInEnabled"><span class="fa fa-search-plus"></span></button>
+        <button class="btn btn-default btn-sm add-margin" v-on:click="zoomOut" :disabled="!zoomOutEnabled"><span class="fa fa-search-minus"></span></button>
+        
+        <button class="btn btn-primary btn-sm" v-on:click="zoomOut" :disabled="!zoomOutEnabled"><span class="fa fa-play"></span></button>
+        <button class="btn btn-warning btn-sm add-margin" v-on:click="zoomOut" :disabled="!zoomOutEnabled"><span class="fa fa-stop"></span></button>
+
+        <button class="btn btn-default  btn-sm" v-on:click="loadSample" data-sample-id="1">
             Example 1
         </button>
-        <button class="btn btn-default pull-right btn-sm" v-on:click="loadSample" data-sample-id="2">
+        <button class="btn btn-default btn-sm" v-on:click="loadSample" data-sample-id="2">
             Example 2
         </button>
-        <button class="btn btn-default pull-right btn-sm" v-on:click="loadSample" data-sample-id="3">
+        <button class="btn btn-default btn-sm" v-on:click="loadSample" data-sample-id="3">
             Example 3
         </button>
 
-        <button class="btn btn-default pull-right btn-sm" v-on:click="tsort">
+        <button class="btn btn-default btn-sm" v-on:click="tsort">
             Translate
         </button>
 
