--- a/app/components/operation/operation-template.html
+++ b/app/components/operation/operation-template.html
@@ -1,4 +1,5 @@
 <div class="operation node {{node.classes}}" title="{{ node.operation.description }}" data-operation-id="{{ node.operation.id }}"
     id="{{ node.id }}" v-bind:style="{zIndex: node.zIndex, top: node.y + 'px', left: node.x + 'px'}" v-on:click="click">
-    <strong><span class="fa {{node.operation.icon}}"></span> {{node.operation.name}}</strong><em>{{node.operation.description}}</em>
+    <strong><span class="fa {{node.operation.icon}}"></span> {{node.operation.name}}</strong>
+    <em>{{node.forms.comment.value}}</em>
 </div>
