--- a/app/components/properties/transformation-template.html
+++ b/app/components/properties/transformation-template.html
@@ -1,5 +1,5 @@
 <div>
     <label>Expression</label>
-    <expression-editor-component expression="(-b + sqrt(b^2 - 4*a*c))/2*a">
+    <expression-editor-component expression="(-b + sqrt(pow(b, 2) - 4*a*c))/(2*a)">
     </expression-editor-component>
 </div>
