--- a/app/components/diagram/diagram.scss
+++ b/app/components/diagram/diagram.scss
@@ -18,7 +18,7 @@ $color5: rgba(102, 155, 188, 1);
 $color6: #fafafa;
 
 $elementWidth: 180px;
-$elementHeight: 50px;
+$elementHeight: 60px;
 
 .sample {
   display: none;
@@ -76,9 +76,6 @@ li.dragging {
 .lemonade-container {
   background: $color6;
   background-image: url(grid1.png);
-  xoverflow: auto;
-  xheight: 75vh;
-  xwidth: 100%;
 }
 #lemonade, .lemonade {
   position: relative;
@@ -104,22 +101,58 @@ li.dragging {
     border-width: 1px;
     font-family: Verdana;
     font-size: 7pt;
+    background: white;
     
     &.service {
       background-color: lighten($color5, 30%) !important;
     }
+    &.comment {
+      strong {
+          display: none;
+      }
+      em {
+          vertical-align: top !important;
+          bottom: inherit;
+          margin-top: 3px;
+          font-size: 8pt !important;
+      }
+      em:before {
+          font: normal normal normal 14px/1 FontAwesome;
+          content: "\f08d   ";
+      }
+      background:#fefabc;
+      overflow-y: auto;
+      border: none !important; 
+      border-radius: 0 !important;
+      padding:10px !important; 
+      font-family: 'Gloria Hallelujah', cursive; 
+      font-size: 1.2em; 
+      color: #000; 
+      width: 200px !important;
+      height: 80px !important;
+
+      -moz-transform: rotate(2deg);
+      -webkit-transform: rotate(2deg);
+      -o-transform: rotate(2deg);
+      -ms-transform: rotate(2deg);
+      transform: rotate(2deg);
+
+      box-shadow: 0px 4px 6px #333;
+      -moz-box-shadow: 0px 4px 6px #333;
+      -webkit-box-shadow: 0px 4px 6px #333;
+    }
     &.data-source {
-      background-color: lighten($color1, 30%) !important;
+      background-color: lighten($color1, 30%);
     }
     &.algorithm {
-      background-color: lighten($color4, 30%) !important;
+      background-color: lighten($color4, 30%);
     }
     &.model {
-      background-color: lighten($color3, 30%) !important;
+      background-color: lighten($color3, 30%);
     }
     &.selected {
       border-width: 2px !important;
-      border-color: $color3 !important;
+      xborder-color: $color3 !important;
     }
     em {
       bottom: 15%;
@@ -129,7 +162,10 @@ li.dragging {
       font-size: 6pt !important;
     }
     &.data-source {
-      cursor: move;
+      cursor: move; /* fallback if grab cursor is unsupported */
+      cursor: grab;
+      cursor: -moz-grab;
+      cursor: -webkit-grab;
       height: $elementHeight;
       overflow: hidden;
       position: absolute;
@@ -177,11 +213,14 @@ li.dragging {
       }
     }
     &.operation {
-      background: white;
       border: $color2 1px solid;
       border-radius: 5px;
       color: $color2;
-      cursor: move;
+      cursor: move; /* fallback if grab cursor is unsupported */
+      cursor: grab;
+      cursor: -moz-grab;
+      cursor: -webkit-grab;
+      
       height: $elementHeight;
       padding: 0px;
       position: absolute;
@@ -194,6 +233,8 @@ li.dragging {
       top: 10%;
       width: 100%;
       border-bottom: 1px solid $color2;
+      font-size: 1.2em;
+      font-family: Arial, Helvetica, sans-serif;
     }
     span {
       font-size: 12pt;
