--- a/app/components/diagram/diagram.scss
+++ b/app/components/diagram/diagram.scss
@@ -97,16 +97,26 @@ li.dragging {
     height: 200%;
     width: 200%;
   }
-  .node {
+  .task {
     border-width: 1px;
     font-family: Verdana;
     font-size: 7pt;
     background: white;
     
+    .decor {
+        color: #aaa;
+        position: absolute;
+        right: -10px;
+        top: -10px;
+    }
     &.service {
       background-color: lighten($color5, 30%) !important;
     }
     &.comment {
+      z-index: 1;
+      .decor {
+          display: none;
+      }
       strong {
           display: none;
       }
@@ -115,6 +125,7 @@ li.dragging {
           bottom: inherit;
           margin-top: 3px;
           font-size: 8pt !important;
+          top: 5%;
       }
       em:before {
           font: normal normal normal 14px/1 FontAwesome;
@@ -130,13 +141,13 @@ li.dragging {
       color: #000; 
       width: 200px !important;
       height: 80px !important;
-
+      /*
       -moz-transform: rotate(2deg);
       -webkit-transform: rotate(2deg);
       -o-transform: rotate(2deg);
       -ms-transform: rotate(2deg);
       transform: rotate(2deg);
-
+      */
       box-shadow: 0px 4px 6px #333;
       -moz-box-shadow: 0px 4px 6px #333;
       -webkit-box-shadow: 0px 4px 6px #333;
@@ -155,62 +166,11 @@ li.dragging {
       xborder-color: $color3 !important;
     }
     em {
-      bottom: 15%;
-      left: 5%;
+      top: 55%;
+      padding: 0 5px;
       position: absolute;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       font-size: 6pt !important;
-    }
-    &.data-source {
-      cursor: move; /* fallback if grab cursor is unsupported */
-      cursor: grab;
-      cursor: -moz-grab;
-      cursor: -webkit-grab;
-      height: $elementHeight;
-      overflow: hidden;
-      position: absolute;
-      width: $elementWidth;
-      &.selected {
-        .middle, .top, .bottom{
-          border-width: 2px !important;
-          border-color: $color3 !important;
-        } 
-      }
-      .middle {
-          width: $elementWidth;
-          height:$elementHeight - 30px;
-          background-color:white;
-          border-left: 1px solid $color2;
-          border-right: 1px solid $color2;
-          position:absolute;
-          top: 10px;
-          > *{
-            margin-top: 5px;
-          }
-      }
-
-      .top{
-         width: $elementWidth;
-          background: white;
-          height: 20px;
-          border: 1px solid $color2;
-          -moz-border-radius: 120px / 25px;
-          -webkit-border-radius: 120px / 25px;
-          border-radius: 120px / 25px;
-          position:absolute;
-      }
-      .bottom{
-         width: $elementWidth;
-          background: white;
-          height: $elementHeight - 30px;
-          border: 1px solid $color2;
-          -moz-border-radius: 120px / 25px;
-          -webkit-border-radius: 120px / 25px;
-          border-radius: 120px / 25px;
-          position:absolute;
-          top: $elementHeight - 30px;
-          box-shadow:0px 0px 10px rgba(0,0,0,0.75)
-      }
     }
     &.operation {
       border: $color2 1px solid;
@@ -227,6 +187,7 @@ li.dragging {
       width: $elementWidth;
       z-index: 2;
     }
+
     strong {
       position: absolute;
       text-align: center;
@@ -237,7 +198,7 @@ li.dragging {
       font-family: Arial, Helvetica, sans-serif;
     }
     span {
-      font-size: 12pt;
+      xfont-size: 12pt;
     }
     p {
       border-top: 1px solid $color2;
