--- a/app/components/properties/property-description-template.html
+++ b/app/components/properties/property-description-template.html
@@ -1,6 +1,6 @@
 <div class="property-description">
     <dl>
-        <dt>{{node.operation.name}}</dt>
-        <dd>{{node.operation.description}}</dd>
+        <dt>{{task.operation.name}}</dt>
+        <dd>{{task.operation.description}}</dd>
     </dl>   
 </div> 
