--- a/app/components/properties/projection-template.html
+++ b/app/components/properties/projection-template.html
@@ -1,6 +1,6 @@
 <div>
     <p>{{field.label}} <span class="fa fa-asterisk" v-show="field.required"></span> 
         <span class="fa fa-question-circle-o pull-right" title="{{field.help}}"></span></p>
-    <v-select multiple :value.sync="selected" :options="options"></v-select>
+    <v-select multiple :value.sync="selected" :options="options" @change="updated" :taggable="true"></v-select>
     {{selected}}
 </div>
