--- a/app/components/diagram/diagram-template.html
+++ b/app/components/diagram/diagram-template.html
@@ -1,39 +1,48 @@
 <div>
-    <div class="buttons-toolbar btn-group pull-right diagram-toolbar">
+    <div>
+        <div class="row">
+            <div class="col-md-5" style="margin-left: 18px;padding-top:5px">
+                <input type="text" placeholder="Unnamed workflow" class="form-control" :value="workflow.name" @keyUp="doChangeWorkflowName | debounce 500"/>
+                <input type="text" placeholder="#Id" class="form-control" :value="workflow.id" @keyUp="doChangeWorkflowId | debounce 500"/>
+            </div>
+            <div class="col-md-6">
+                <div class="buttons-toolbar btn-group pull-right diagram-toolbar">
+                    <button class="btn btn-default btn-sm" v-on:click="load"><span class="fa fa-folder-open-o"></span></button>
+                    <button class="btn btn-success btn-sm add-margin" v-on:click="saveWorkflow"><span class="fa fa-save"></span></button>
+                </div>
+            </div>
+        </div>
+        <div class="buttons-toolbar btn-group pull-right diagram-toolbar">
 
-        <button class="btn btn-default btn-sm" v-on:click="load"><span class="fa fa-folder-open-o"></span></button>
-        <button class="btn btn-success btn-sm add-margin" v-on:click="save"><span class="fa fa-save"></span></button>
 
-        <button class="btn btn-default btn-sm add-margin" v-on:click="deleteSelected"><span class="fa fa-remove"></span></button>
-        
-        <button class="btn btn-default btn-sm" v-on:click="zoomIn" :disabled="!zoomInEnabled"><span class="fa fa-search-plus"></span></button>
-        <button class="btn btn-default btn-sm add-margin" v-on:click="zoomOut" :disabled="!zoomOutEnabled"><span class="fa fa-search-minus"></span></button>
-        
-        <button class="btn btn-primary btn-sm" v-on:click="zoomOut" :disabled="!zoomOutEnabled"><span class="fa fa-play"></span></button>
-        <button class="btn btn-warning btn-sm add-margin" v-on:click="zoomOut" :disabled="!zoomOutEnabled"><span class="fa fa-stop"></span></button>
+            <button class="btn btn-default btn-sm add-margin" v-on:click="deleteSelected"><span class="fa fa-remove"></span></button>
+            
+            <button class="btn btn-default btn-sm" v-on:click="zoomIn" :disabled="!zoomInEnabled"><span class="fa fa-search-plus"></span></button>
+            <button class="btn btn-default btn-sm add-margin" v-on:click="zoomOut" :disabled="!zoomOutEnabled"><span class="fa fa-search-minus"></span></button>
+            
+            <button class="btn btn-primary btn-sm" v-on:click="zoomOut" :disabled="!zoomOutEnabled"><span class="fa fa-play"></span></button>
+            <button class="btn btn-warning btn-sm add-margin" v-on:click="zoomOut" :disabled="!zoomOutEnabled"><span class="fa fa-stop"></span></button>
 
-        <button class="btn btn-default  btn-sm" v-on:click="loadSample" data-sample-id="1">
-            Example 1
-        </button>
-        <button class="btn btn-default btn-sm" v-on:click="loadSample" data-sample-id="2">
-            Example 2
-        </button>
-        <button class="btn btn-default btn-sm" v-on:click="loadSample" data-sample-id="3">
-            Example 3
-        </button>
-
-        <button class="btn btn-default btn-sm" v-on:click="tsort">
-            Translate
-        </button>
-
-        <div class="pull-right">{{zoomPercent}}</div>
+            <button class="btn btn-default  btn-sm" v-on:click="loadSample" data-sample-id="1">
+                Example 1
+            </button>
+            <button class="btn btn-default btn-sm" v-on:click="loadSample" data-sample-id="2">
+                Example 2
+            </button>
+            <button class="btn btn-default btn-sm" v-on:click="loadSample" data-sample-id="3">
+                Example 3
+            </button>
+            <div class="pull-right">{{zoomPercent}}</div>
+        </div>
     </div>
-    <div class="lemonade-container" id="lemonade-container" style="height: calc(100vh - 170px); width:100%; position: relative; overflow:hidden">
-        <div class="lemonade" v-on:drop="drop" v-on:dragover="allowDrop" id="lemonade-diagram">
-            <!-- 46 is delete key and tabindex is required to handle div keyup -->
-            <div class="diagram" v-on:click="diagramClick" v-on:keyup.46="deleteSelected">
-                <task-component v-for="task of tasks" :task="task" :instance="instance"></task-component>
-                <flow-component v-for="flow of flows" :flow="flow" :instance="instance"></flow-component>
+    <div>
+        <div class="lemonade-container" id="lemonade-container" style="height: calc(100vh - 170px); width:100%; position: relative; overflow:hidden">
+            <div class="lemonade" v-on:drop="drop" v-on:dragover="allowDrop" id="lemonade-diagram">
+                <!-- 46 is delete key and tabindex is required to handle div keyup -->
+                <div class="diagram" v-on:click="diagramClick" v-on:keyup.46="deleteSelected">
+                    <task-component v-for="task of tasks" :task="task" :instance="instance"></task-component>
+                    <flow-component v-for="flow of flows" :flow="flow" :instance="instance"></flow-component>
+                </div>
             </div>
         </div>
     </div>
