Implementation of new features

--- a/app/components/app/app-template.html
+++ b/app/components/app/app-template.html
@@ -89,7 +89,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row hide">
             <div class="col-md-12">
                   <div style="text-align: left">
                     <small><pre><code class="python"></code></pre></small>
@@ -97,7 +97,7 @@
                 <textarea class="form-control" style="font-size:8pt" rows="10" id="save-area"></textarea>
             </div>
         </div>
-        <div>
+        <div class="hide">
             <load-workflow-component :show.sync="showModalLoadWorkflow"></load-workflow-component>
         </div>
     </div>
