--- a/app/components/task/task-template.html
+++ b/app/components/task/task-template.html
@@ -2,7 +2,7 @@
     id="{{ task.id }}" v-bind:style="{zIndex: task.z_index, top: task.top + 'px', left: task.left + 'px'}" v-on:click="click" :style="{backgroundColor: task.forms.color.value}">
     <strong><span class="fa {{task.operation.icon}}"></span> {{task.operation.name}}</strong>
     <em>{{task.forms.comment.value}}</em>
-    <span class="decor">
+    <span class="decor {{task.status.toLowerCase()}}">
         <span class="fa fa-check-circle fa-2x"></span>
     </span>
 </div>
