--- a/app/components/diagram/diagram.scss
+++ b/app/components/diagram/diagram.scss
@@ -20,273 +20,329 @@ $color6: #fafafa;
 $elementWidth: 180px;
 $elementHeight: 45px;
 
+.has-2-ports {
+        text-align: center;
+        width: $elementWidth / 2;
+}
+.has-3-ports {
+        margin: 10px 0;
+        padding: 0px 5px;
+        text-align: center;
+        width: $elementWidth / 3;
+        font-size:.8em;
+}
+
 .sample {
-  display: none;
+    display: none;
 }
 /* Elements */
 body {
-    padding-top: 60px;
+        padding-top: 60px;
 }
 
 .buttons-toolbar {
-  background: white;
-  padding: 5px;
-  width: 100%;
-  z-index: 100;
+    background: white;
+    padding: 5px;
+    width: 100%;
+    z-index: 100;
 }
 .no-padding {
-  [class*="col-"] {
-    padding-left: 0 !important;
-    padding-right: 0 !important;
-  }
+    [class*="col-"] {
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+    }
 }
 .small-padding {
-  [class*="col-"] {
-    padding-left: 2px !important;
-    padding-right: 2px !important;
-  }
+    [class*="col-"] {
+        padding-left: 2px !important;
+        padding-right: 2px !important;
+    }
 }
 .card-content {
-  background: white;
+    background: white;
 }
 
 .jsplumb-overlay.labelClass {
-  cursor: pointer;
+    cursor: pointer;
 }
 .labelClass {
-  background: white;
+    background: white;
 }
 li.dragging {
-  color: $color2;
-  padding-top: 15px;
-  list-style-type: none;
-  width: $elementWidth;
-  height: $elementHeight;
-  border: 1px solid $color2;
-  border-radius: 10px;
-  font-size: 8pt;
-  text-align: center;
-  font-weight: bold;
+    color: $color2;
+    padding-top: 15px;
+    list-style-type: none;
+    width: $elementWidth;
+    height: $elementHeight;
+    border: 1px solid $color2;
+    border-radius: 10px;
+    font-size: 8pt;
+    text-align: center;
+    font-weight: bold;
 }
 .diagram-toolbar {
-    .add-margin {
-        margin-right: 5px !important;
-    }
+        .add-margin {
+                margin-right: 5px !important;
+        }
 }
 .lemonade-container {
-  background: $color6;
-  background-image: url(grid1.png);
-  height: calc(100vh - 245px); 
-  overflow:hidden;
-  position: relative; 
-  width:100%; 
+    //background: url(grid1.png);
+    height: calc(100vh - 215px); 
+    overflow:hidden;
+    position: relative; 
+    width:100%; 
+}
+#lemonade-diagram {
+    background-image: url(grid1.png);
+    .ghost-active {
+    width: 2000px;
+    height: 4000px;
+        display: block !important;
+    }
+    .ghost-select > span {
+        border: 1px dashed #000;
+        width: 100%;
+        height: 100%;
+        float: left;
+    }
+    .ghost-select {
+        display: none;
+        width: 100px;
+        height: 100px;
+        z-index: 100000;
+        position: absolute !important;
+        cursor: default !important;
+    }
 }
 #lemonade, .lemonade {
-  position: relative;
-  margin-top: 0px;
-  width: 5000px;
-  z-index: 90;
-  min-height: calc(690px * (90/150));
-  height: 5000px;
-  -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none;   /* Chrome/Safari/Opera */
-  -khtml-user-select: none;    /* Konqueror */
-  -moz-user-select: none;      /* Firefox */
-  -ms-user-select: none;       /* Internet Explorer/Edge */
-  user-select: none;           /* Non-prefixed version, currently
-                                not supported by any browser */
-  .diagram {
-    background-repeat:repeat;
-    display: inline-block;
-    height: 200%;
-    width: 200%;
-  }
-  .task {
-    border-width: 1px;
-    font-family: Verdana;
-    font-size: 7pt;
-    background: white;
-    
-    .decor {
-        color: #aaa;
-        position: absolute;
-        right: -10px;
-        top: -10px;
-        &.completed {
-            color: blue;
-            font-size: 16pt;
+    position: relative;
+    margin-top: 0px;
+    z-index: 0;
+    min-height: calc(690px * (90/150));
+    height: 5000px;
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none;     /* Chrome/Safari/Opera */
+    -khtml-user-select: none;        /* Konqueror */
+    -moz-user-select: none;            /* Firefox */
+    -ms-user-select: none;             /* Internet Explorer/Edge */
+    user-select: none;                     /* Non-prefixed version, currently
+                                                                not supported by any browser */
+    .task {
+        border-width: 1px;
+        font-family: Verdana;
+        font-size: 7pt;
+        background: white;
+        
+        .decor {
+                color: #aaa;
+                background-color: #fff;
+                border-radius: 20px;
+                padding: 0px;
+                position: absolute;
+                right: -10px;
+                display: block;
+                top: -10px;
+                height: 20px;
+                width: 20px;
+                text-align: center;
+                &.completed {
+                        color: seagreen;
+                        span {
+                                @extend .fa-check;
+                        }
+                }
+                &.running {
+                        color: dodgerblue;
+                        span {
+                                @extend .fa-spin;
+                                @extend .fa-refresh;
+                                display: block;
+                                width: 16px;
+                                height: 16px;
+                                display:inline-block;
+                                text-align: center;
+                                vertical-align: bottom;
+                        }
+                }
+                &.interrupted {
+                        color: black;
+                        span {
+                                @extend .fa-hand-stop-o;
+                        }
+                }
+                &.canceled {
+                        color: darkgray;
+                        span {
+                                @extend .fa-close;
+                        }
+                }
+                &.waiting {
+                        color: #aaa;
+                        span {
+                                @extend .fa-clock-o;
+                        }
+                }
+                &.error {
+                        color: red;
+                        span {
+                                @extend .fa-warning;
+                        }
+                }
         }
-        &.running {
-            color: yellow;
-            font-size: 16pt;
+        &.service {
+            background-color: lighten($color5, 30%) !important;
         }
-        &.interrupted {
-            color: black;
-            font-size: 16pt;
+        &.comment {
+            z-index: 1;
+            .decor {
+                    display: none;
+            }
+            strong {
+                    display: none;
+            }
+            em {
+                    vertical-align: top !important;
+                    bottom: inherit;
+                    margin-top: 3px;
+                    font-size: 10pt !important;
+                    top: 5%;
+            }
+            em:before {
+                    font: normal normal normal 14px/1 FontAwesome;
+                    content: "\f08d     ";
+            }
+            background:#fefabc;
+            overflow-y: auto;
+            border: none !important; 
+            border-radius: 0 !important;
+            padding:10px !important; 
+            font-family: 'Gloria Hallelujah', cursive; 
+            font-size: 1.2em; 
+            color: #000; 
+            width: 200px !important;
+            height: 80px !important;
+            /*
+            -moz-transform: rotate(2deg);
+            -webkit-transform: rotate(2deg);
+            -o-transform: rotate(2deg);
+            -ms-transform: rotate(2deg);
+            transform: rotate(2deg);
+            */
+            box-shadow: 0px 4px 6px #333;
+            -moz-box-shadow: 0px 4px 6px #333;
+            -webkit-box-shadow: 0px 4px 6px #333;
         }
-        &.canceled {
-            color: darkgray;
-            font-size: 16pt;
+        &.data-source {
+            background-color: lighten($color1, 30%);
         }
-        &.waiting {
-            color: #aaa;
+        &.algorithm {
+            background-color: lighten($color4, 30%);
         }
-        &.error {
-            color: red;
-            font-size: 16pt;
+        &.model {
+            background-color: lighten($color3, 30%);
+        }
+        &.selected {
+            box-shadow: -2px 1px 6px 0px    $color3;
+        }
+        em {
+            top: 55%;
+            padding: 0 5px;
+            position: absolute;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-size: 6pt !important;
+        }
+        &.operation {
+            border: $color2 1px solid;
+            border-radius: 5px;
+            color: $color2;
+            cursor: move; /* fallback if grab cursor is unsupported */
+            cursor: grab;
+            cursor: -moz-grab;
+            cursor: -webkit-grab;
+            
+            height: $elementHeight;
+            padding: 0px;
+            position: absolute;
+            width: $elementWidth;
+            z-index: 2;
+            &.jsplumb-drag-selected {
+                border: 3px solid #d22 !important; 
+            }
+        }
+        &.operation:after {
+                mix-blend-mode: difference;
+        }
+        strong {
+            position: absolute;
+            text-align: center;
+            top: 10%;
+            width: 100%;
+            border-bottom: 1px solid $color2;
+            font-size: 1.2em;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        span {
+            xfont-size: 12pt;
+        }
+        p {
+            border-top: 1px solid $color2;
         }
     }
-    &.service {
-      background-color: lighten($color5, 30%) !important;
-    }
-    &.comment {
-      z-index: 1;
-      .decor {
-          display: none;
-      }
-      strong {
-          display: none;
-      }
-      em {
-          vertical-align: top !important;
-          bottom: inherit;
-          margin-top: 3px;
-          font-size: 8pt !important;
-          top: 5%;
-      }
-      em:before {
-          font: normal normal normal 14px/1 FontAwesome;
-          content: "\f08d   ";
-      }
-      background:#fefabc;
-      overflow-y: auto;
-      border: none !important; 
-      border-radius: 0 !important;
-      padding:10px !important; 
-      font-family: 'Gloria Hallelujah', cursive; 
-      font-size: 1.2em; 
-      color: #000; 
-      width: 200px !important;
-      height: 80px !important;
-      /*
-      -moz-transform: rotate(2deg);
-      -webkit-transform: rotate(2deg);
-      -o-transform: rotate(2deg);
-      -ms-transform: rotate(2deg);
-      transform: rotate(2deg);
-      */
-      box-shadow: 0px 4px 6px #333;
-      -moz-box-shadow: 0px 4px 6px #333;
-      -webkit-box-shadow: 0px 4px 6px #333;
-    }
-    &.data-source {
-      background-color: lighten($color1, 30%);
-    }
-    &.algorithm {
-      background-color: lighten($color4, 30%);
-    }
-    &.model {
-      background-color: lighten($color3, 30%);
-    }
-    &.selected {
-      box-shadow: -2px 1px 6px 0px  $color3;
-    }
-    em {
-      top: 55%;
-      padding: 0 5px;
-      position: absolute;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      font-size: 6pt !important;
-    }
-    &.operation {
-      border: $color2 1px solid;
-      border-radius: 5px;
-      color: $color2;
-      cursor: move; /* fallback if grab cursor is unsupported */
-      cursor: grab;
-      cursor: -moz-grab;
-      cursor: -webkit-grab;
-      
-      height: $elementHeight;
-      padding: 0px;
-      position: absolute;
-      width: $elementWidth;
-      z-index: 2;
-    }
-    &.operation:after {
-        mix-blend-mode: difference;
-    }
-    strong {
-      position: absolute;
-      text-align: center;
-      top: 10%;
-      width: 100%;
-      border-bottom: 1px solid $color2;
-      font-size: 1.2em;
-      font-family: Arial, Helvetica, sans-serif;
-    }
-    span {
-      xfont-size: 12pt;
-    }
-    p {
-      border-top: 1px solid $color2;
-    }
-  }
 }
 .endpoint {
-  opacity: 1;
-  background: white;
-  &.many-endpoint {
-    background-color: red;
-  }
+    opacity: 1;
+    background: white;
+    &.many-endpoint {
+        background-color: red;
+    }
 }
 .endpoint-label {
-  color: $color5;
-  background: $color6;
-  font-size: 8pt;
-  &.input {
-    margin-top: -20px;
-  }
-  &.output {
-    margin-top: 20px;
-  }
+    color: $color5;
+    background: $color6;
+    font-size: 8pt;
+    &.input {
+        margin-top: -20px;
+    }
+    &.output {
+        margin-top: 20px;
+    }
 }
 .xendpoint:hover {
-  opacity: 1;
-  background-color: $color3;
+    opacity: 1;
+    background-color: $color3;
 }
 .operation {
-  li {
-    list-style-type: none;
-    font-size: 9pt;
-    padding:5px 5px;
-    font-weight: bold;
+    li {
+        list-style-type: none;
+        font-size: 9pt;
+        padding:5px 5px;
+        font-weight: bold;
 
-  }
+    }
 }
 /**/
 .glyphicon {
-  @extend .fa
+    @extend .fa
 }
 .glyphicon-remove {
-  @extend .fa-remove
+    @extend .fa-remove
 }
 .icon-union:before {
-  content: "\222A";
+    content: "\222A";
 }
 .icon-intersection:before {
-  content: "\2229";
+    content: "\2229";
 }
 .icon-projection:before {
-  content: '\03C3';
+    content: '\03C3';
 }
 .jsplumb-drag-selected {
-    border-width: 2px !important;
-    border-color: $color5 !important;
+        border-width: 2px !important;
+        border-color: $color5 !important;
 }
 .jsplumb-endpoint {
-  background: transparent;
+    background: transparent;
 }
 .jsplumb-connector {
-  z-index: 2;
+    z-index: 2;
 }
