--- a/app/components/properties/properties.scss
+++ b/app/components/properties/properties.scss
@@ -1,7 +1,7 @@
-$defaultFontSize: 1rem;
+$defaultFontSize: 1.2rem;
 
 .lemonade-properties {
-    height: calc(100vh - 100px); 
+    height: calc(100vh - 100px);
     #properties-form {
         background: white;
         z-index: 100;
@@ -105,4 +105,63 @@ $defaultFontSize: 1rem;
             border-color: #555;
         }
     }
+    .lemonade-modal {
+        zoom: 1.2;
+    }
+    .expression-editor {
+        zoom: 1;
+        .modal-body {
+            margin: 2px;
+            padding: 0
+        }
+        .function-list {
+            height: 120px;
+            overflow-y: auto;
+        }
+    }
+    .quarter {
+        float: left; 
+        width: 24%;
+    }
+    input:required:invalid {
+        border: 1px solid red;
+    }
+    button.flat {
+        border: 1px solid #aaa;
+    }
 }
+.fixed_headers {
+    table-layout: fixed;
+    border-collapse: collapse;
+}
+.fixed_headers th {
+    text-decoration: underline;
+}
+.fixed_headers th,
+.fixed_headers td {
+    padding: 5px;
+    text-align: left;
+}
+.fixed_headers td:nth-child(1),
+.fixed_headers th:nth-child(1) {
+    min-width: 200px;
+}
+.fixed_headers td:nth-child(2),
+.fixed_headers th:nth-child(2) {
+    min-width: 200px;
+}
+.fixed_headers td:nth-child(3),
+.fixed_headers th:nth-child(3) {
+    width: 350px;
+}
+.fixed_headers thead tr {
+    display: block;
+    position: relative;
+}
+.fixed_headers tbody {
+    display: block;
+    overflow-y: scroll;
+    width: 100%;
+    height: 150px;
+}
+
